--- a/8.bsdsockets/.vscode/settings.json
+++ b/8.bsdsockets/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
         "skbuff.h": "c"
-    }
+    },
+    "lldb.displayFormat": "auto",
+    "lldb.showDisassembly": "always",
+    "lldb.dereferencePointers": true,
+    "lldb.consoleMode": "commands"
 }
